Ignoring virtual env. folder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+#IDEs
+.vscode/
 .idea/
 
+#Intermediate Coverage file
+.coverage
+
+#Output files
+*.png
+
+#Python runtime
+*.pyc
+*.egg-info
+.pytest_cache
+
+#Virtual environments
+venv/
+.venv/
+
+#Other
 __pycache__/
